--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FaceApps</string>
+    <string name="LISENSE_KEY">f0f1+J6hdYTpWKRMZoCbdxkESTUS4jMDOe/5AcCBMEaRYpfiDiXTOwuKxL5xIhunw0lMlcsum+jrUx2JQJBpir1XSkPhbuTH6p4XIXgd3sf5BThXHPn/t3Pcr6GFMdNtJft6U0QrGQ4RtMhwDP9CClvqsAgD0BOZQ8xwsfC8KI0=</string>
 </resources>
